# HomeAssistant-SmartHome

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/config/: example_indoor_alerts.json  example_outdoor_alerts.json
backend/src/: main.cpp  simple_server
frontend/: dashboard.html  package-lock.json  package.json.backup  setupProxy.js
frontend/public/: index.html
frontend/src/: App.js  App.js.backup
